# CrabUSB

./: .gitignore  CLAUDE.md  Cargo.toml  bare-test.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: test.yml
docs/: HUB_ARCHITECTURE.md
src/: err.rs  lib.rs  wait.rs
src/host/: mod.rs
src/host/xhci/: context.rs  event.rs  mod.rs  ring.rs
test_crates/test_hub/: .qemu.nested.toml  .qemu.toml  .qemu.tt.toml  Cargo.toml
test_crates/test_hub/tests/: test.rs  test_dwc.rs
test_crates/test_libusb/tests/: test.rs
test_crates/test_libusb_uvc/: Cargo.toml
test_crates/test_libusb_uvc/src/: main.rs
test_crates/test_xhci_uvc/: Cargo.toml  README.md
test_crates/test_xhci_uvc/src/: lib.rs
test_crates/test_xhci_uvc/tests/: test.rs
tests/: test.rs
usb-device/hid/keyboard/: Cargo.toml
usb-device/hid/keyboard/examples/: keyboard.rs
usb-device/hid/keyboard/src/: lib.rs
usb-device/uvc/: Cargo.toml  FORMAT_SETTING.md  ISO_TRANSFER_IMPLEMENTATION.md  VIDEO_CAPTURE_README.md  test_conversion.rs
usb-device/uvc/examples/: capture_video.rs  simple_streaming_test.rs
usb-device/uvc/src/: descriptors.rs  frame.rs  lib.rs  stream.rs
usb-device/uvc/tests/: basic_tests.rs
usb-host/: CHANGELOG.md  Cargo.toml  README.md  build.rs
usb-host/src/: device.rs  err.rs  host.rs  kcore.rs  lib.rs  osal.rs  queue.rs
usb-host/src/backend/: mod.rs
usb-host/src/backend/dwc/: GRF_DTS_ANALYSIS.md  PHY1_ANALYSIS.md  PHY_CLEANUP.md  PHY_INTEGRATION.md  PHY_REGISTERS.md  consts.rs  cru.rs  event.rs  grf.rs  mod.rs  phy.rs  reg.rs  usb2phy.rs
usb-host/src/backend/dwc/udphy/: config.rs  consts.rs  mod.rs  regmap.rs
usb-host/src/backend/kmod/: kcore.rs  mod.rs  transfer.rs
usb-host/src/backend/kmod/dwc/: event.rs  mod.rs  reg.rs  usb2phy.rs
usb-host/src/backend/kmod/dwc/udphy/: config.rs  consts.rs  mod.rs  regmap.rs
usb-host/src/backend/kmod/hub/: device.rs  mod.rs
usb-host/src/backend/kmod/xhci/: context.rs  device.rs  endpoint.rs  host.rs  hub.rs  ring.rs  transfer.rs
usb-host/src/backend/libusb/: context.rs  device.rs  endpoint.rs  err.rs  interface.rs  mod.rs  queue.rs
usb-host/src/backend/ty/: ep.rs  hub.rs  mod.rs  transfer.rs
usb-host/src/backend/ty/ep/: bulk.rs  ctrl.rs  int.rs  iso.rs  mod.rs
usb-host/src/backend/umod/: device.rs  endpoint.rs
usb-host/src/backend/xhci/: cmd.rs  context.rs  delay.rs  device.rs  dwc3.rs  endpoint.rs  event.rs  host.rs  hub.rs  interface.rs  mod.rs  port.rs  reg.rs  ring.rs  rk3588_phy.rs  root.rs  sync.rs  transfer.rs
usb-host/src/backend/xhci/ring/: mod.rs
usb-host/src/common/: device.rs  mod.rs
usb-host/src/host/: mod.rs
usb-host/src/host/common/: mod.rs
usb-host/src/host/libusb/: device.rs  mod.rs
usb-host/src/host/xhci/: context.rs  device.rs  endpoint.rs  interface.rs  mod.rs  root.rs
usb-host/src/host/xhci/ring/: mod.rs
usb-host/src/hub/: INTEGRATION.md  device.rs  event.rs  manager.rs  mod.rs
usb-host/src/standard/: mod.rs
usb-host/tests/: test.rs  test_dwc.rs
usb-if/: CHANGELOG.md  Cargo.toml
usb-if/src/: err.rs  lib.rs  queue.rs
usb-if/src/descriptor/: class_code.rs  lang_id.rs  mod.rs  parser.rs
usb-if/src/host/: hub.rs  mod.rs
usb-if/src/transfer/: mod.rs  sync.rs  wait.rs
utils/ktest-helper/: Cargo.toml
utils/ktest-helper/src/: lib.rs
utils/uvc-frame-parser/: Cargo.toml
utils/uvc-frame-parser/examples/: toml_format_example.rs
utils/uvc-frame-parser/src/: lib.rs  main.rs  tests.rs
