[package]
name = "crab-usb"
version = "0.1.0"
edition = "2024"
authors = ["周睿 <zrufo747@outlook.com>"]
description = "A simple usb host"
repository = "https://github.com/qclic/igb-driver"
license = "MIT"
keywords = ["os", "nic", "igb", "driver"]
categories = ["embedded", "no-std"]

[dependencies]
tock-registers = "0.9"
log = "0.4"
dma-api = { version = "0.2", features = ["alloc"] }
nb = "1.1"
bitflags = "2.8"
thiserror = { version = "2", default-features = false }
futures = { version = "0.3", features = ["alloc"], default-features = false }
xhci = "0.9"
crossbeam = { version = "0.8", features = ["alloc"], default-features = false }
crossbeam-skiplist = { version = "0.1", features = [
    "alloc",
], default-features = false }
spin = { version = "0.9" }

[dev-dependencies]
bare-test = "0.4"
pcie = "0.2"
byte-unit = { version = "5.1.6", default-features = false, features = ["byte"] }
spin_on = "0.1.1"

[build-dependencies]
bare-test-macros = "0.2"


[[test]]
name = "test"
harness = false
