[workspace]
members = ["test_crates/*", "usb-device/hid/keyboard", "usb-device/uvc", "usb-host", "usb-if", "utils/uvc-frame-parser"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/drivercraft/CrabUSB"

[workspace.dependencies]
crab-usb = {path = "usb-host", version = "0.5" }
futures = {version = "0.3", default-features = false}
log = "0.4"
thiserror = {version = "2", default-features = false}
usb-if = {path = "usb-if", version = "0.3" }
crab-uvc = {path = "usb-device/uvc", version = "0.1" }
bare-test = {version = "0.7"}
rockchip-pm = {version = "0.3.3", git = "https://github.com/drivercraft/rockchip-pm", rev = "1a6a9c8cc7f53eec35816a517ab426026ab4b7a6"}
rk3588-clk = {path = "../rk3588-clk" }