[package]
authors = ["周睿 <zrufo747@outlook.com>", "dbydd <dbydd@outlook.com>"]
categories = ["embedded", "no-std"]
description = "A usb host for embedded systems, written in Rust."
edition = "2024"
keywords = ["os", "usb", "xhci", "driver"]
license = "MIT"
name = "crab-usb"
repository = "https://github.com/drivercraft/CrabUSB"
version = "0.5.0"

[features]
default = ["aggressive_usb_reset"]
aggressive_usb_reset = []
libusb = ["libusb1-sys"]

[dependencies]
bitflags = "2.8"
crossbeam = {version = "0.8", features = ["alloc"], default-features = false}
crossbeam-skiplist = {version = "0.1", features = [
  "alloc",
], default-features = false}
dma-api = {version = "0.5", features = ["alloc"]}
futures = {workspace = true, features = ["alloc"]}
log = "0.4"
mbarrier = "0.1"
nb = "1.1"
num_enum = {version = "0.7", default-features = false}
spin = {version = "0.10"}
thiserror = {workspace = true}
tock-registers.workspace = true
usb-if = {workspace = true}
xhci = "0.9"
trait-ffi = "0.2.4"
enum_dispatch = "0.3"
anyhow = { version = "1", default-features = false}

[target.'cfg(not(target_os = "none"))'.dependencies]
libusb1-sys = { version = "0.7", optional = true}

[dev-dependencies]
bare-test = {workspace = true}
byte-unit = {version = "5.1.6", default-features = false, features = ["byte"]}
pcie = "0.2"
spin_on = "0.1.1"
rockchip-pm = {workspace = true}
rockchip-soc = {workspace = true}
rdrive = "0.18"

[build-dependencies]
bare-test-macros = "0.2"

[[test]]
harness = false
name = "test"

[[test]]
harness = false
name = "test_dwc"