[package]
edition.workspace = true
license.workspace = true
name = "usb-uvc"
publish = false
repository.workspace = true
version = "0.1.0"

[dependencies]
crab-usb = {workspace = true, features = ["libusb"]}
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
tokio = {version = "1", features = ["full"]}
